platform/Flutter/sweetline/src/c_sweetline.h

/// Error codes
typedef enum sl_error {
  SL_OK = 0, // No error
  SL_HANDLE_INVALID = 1, // Invalid handle
  SL_JSON_PROPERTY_MISSED = -1, // Missing property in syntax rule JSON
  SL_JSON_PROPERTY_INVALID = -2, // Invalid property value in syntax rule JSON
  SL_PATTERN_INVALID = -3, // Invalid regex pattern in syntax rule JSON
  SL_STATE_INVALID = -4, // Invalid state in syntax rule JSON
  SL_JSON_INVALID = -5, // Invalid syntax rule JSON
  SL_FILE_NOT_EXISTS = -6, // Syntax rule file does not exist
  SL_FILE_INVALID = -7, // Syntax rule file content is invalid or empty
  SL_IMPORT_SYNTAX_NOT_FOUND = -8, // importSyntax target syntax is not compiled yet
  SL_STATE_REFERENCE_NOT_FOUND = -9, // state/subState/onLineEndState target does not exist
  SL_INLINE_STYLE_REFERENCE_NOT_FOUND = -10, // inline style name is not declared in styles[]
} sl_error_t;
/// Syntax rule error information
typedef struct sl_syntax_error {
  /// Error code
  sl_error_t err_code;
  /// Error message
  const char* err_msg;
} sl_syntax_error_t;
/// Managed document handle
typedef struct sl_document_handle sl_document_handle;
typedef sl_document_handle* sl_document_handle_t;
/// Highlight engine handle
typedef struct sl_engine_handle sl_engine_handle;
typedef sl_engine_handle* sl_engine_handle_t;
/// Highlight analyzer handle
typedef struct sl_analyzer_handle sl_analyzer_handle;
typedef sl_analyzer_handle* sl_analyzer_handle_t;
/// Perform full highlight analysis on a text
/// @param analyzer_handle Plain text highlight analyzer handle
/// @param text Full text content
/// @return Analysis result, tightly packed in byte order. Structure:
/// @code
/// result[0] = span payload flags
///             bit0: hasStartIndex
///             bit1: inlineStyle
/// result[1] = span field count (stride)
/// result[2] = line count
/// Followed by line_count line entries:
///   line_entry[0] = span count of current line
///   Followed by span_count * stride fields
/// Span payload:
///   common: [column, length]
///   if show_index=true: append [startIndex]
///   if inline_style=true: append [foregroundColor, backgroundColor, fontAttributes]
///   else: append [styleId]
/// fontAttributes bitmask:
///   (bits & 1) != 0 => bold
///   (bits & (1 << 1)) != 0 => italic
///   (bits & (1 << 2)) != 0 => strikethrough
/// @endcode
/// Note: the return value must be freed by calling sl_free_buffer after use
SL_API int32_t* sl_text_analyze(sl_analyzer_handle_t analyzer_handle, const char* text);
/// Perform full highlight analysis on a managed document (typically called once after initial document load)
/// @param analyzer_handle Document highlight analyzer handle
/// @return Analysis result, tightly packed in byte order. Structure:
/// @code
/// Same format as sl_text_analyze:
/// [flags, spanStride, lineCount, lineEntry...]
/// @endcode
/// Note: the return value must be freed by calling sl_free_buffer after use
SL_API int32_t* sl_document_analyze(sl_analyzer_handle_t analyzer_handle);
/// Perform incremental highlight analysis on a managed document (called when document changes)
/// @param analyzer_handle Document highlight analyzer handle
/// @param changes_range Change range, array structure: [startLine],[startColumn],[endLine],[endColumn]
/// @param new_text Changed text
/// @return Full analysis result for the entire document, tightly packed in byte order. Structure:
/// @code
/// Same format as sl_text_analyze:
/// [flags, spanStride, lineCount, lineEntry...]
/// @endcode
/// Note: the return value must be freed by calling sl_free_buffer after use
SL_API int32_t* sl_document_analyze_incremental(sl_analyzer_handle_t analyzer_handle, int32_t* changes_range, const char* new_text);
/// Perform incremental highlight analysis on a managed document, returning only a highlight slice for the specified line range
/// @param analyzer_handle Document highlight analyzer handle
/// @param changes_range Change range, array structure: [startLine],[startColumn],[endLine],[endColumn]
/// @param new_text Changed text
/// @param visible_range Visible line range, array structure: [startLine],[lineCount]
/// @return Highlight slice for the specified line range, tightly packed in byte order. Structure:
/// @code
/// result[0] = span payload flags
///             bit0: hasStartIndex
///             bit1: inlineStyle
/// result[1] = span field count (stride)
/// result[2] = slice start line (start_line)
/// result[3] = total line count after patch (total_line_count)
/// result[4] = slice line count (line_count)
/// Followed by line_count line entries:
///   line_entry[0] = span count of current line
///   followed by span payloads (same span payload structure as sl_text_analyze)
/// @endcode
/// Note: the return value must be freed by calling sl_free_buffer after use
SL_API int32_t* sl_document_analyze_incremental_in_line_range(
  sl_analyzer_handle_t analyzer_handle, int32_t* changes_range, const char* new_text, int32_t* visible_range);
/// Get highlight slice from the current cached document highlight result
/// Requires prior call to sl_document_analyze or sl_document_analyze_incremental
/// @param analyzer_handle Document highlight analyzer handle
/// @param visible_range Visible line range, array structure: [startLine],[lineCount]
/// @return Highlight slice for the specified line range, tightly packed in byte order. Structure:
/// @code
/// Same format as sl_document_analyze_incremental_in_line_range:
/// [flags, spanStride, startLine, totalLineCount, lineCount, lineEntry...]
/// @endcode
/// Note: the return value must be freed by calling sl_free_buffer after use
SL_API int32_t* sl_document_get_highlight_slice(sl_analyzer_handle_t analyzer_handle, int32_t* visible_range);
/// Perform indent guide analysis on a managed document (requires prior call to sl_document_analyze or sl_document_analyze_incremental)
/// @param analyzer_handle Document highlight analyzer handle
/// @return Analysis result, tightly packed in byte order. Structure:
/// @code
/// result[0] = number of indent guide lines (guide_count)
/// result[1] = fixed field count per guide line (stride=6)
/// result[2] = number of line states (line_count)
/// result[3] = field count per line state (4)
/// Followed by guide_count guide line entries, each with structure:
/// [column, start_line, end_line, nesting_level, scope_rule_id, branch_count, branch_line_0, branch_column_0, ...]
/// Note: actual length per guide line = stride + branch_count * 2
/// Followed by line_count line state entries, each with structure:
/// [nesting_level, scope_state, scope_column, indent_level]
/// where scope_state: 0=START, 1=END, 2=CONTENT
/// @endcode
/// Note: the return value must be freed by calling sl_free_buffer after use
SL_API int32_t* sl_document_analyze_indent_guides(sl_analyzer_handle_t analyzer_handle);
/// Free the memory of analysis results. All analysis functions returning int32_t*
/// (such as sl_text_analyze, sl_document_analyze, sl_document_analyze_incremental,
/// sl_document_analyze_incremental_in_line_range, sl_document_get_highlight_slice) must be freed via this function
/// @param result Highlight analysis result
SL_API void sl_free_buffer(int32_t* result);