platform/Flutter/sweetline/lib/sweetline_bindings_generated.dart


/// Perform incremental highlight analysis on a managed document (called when document changes)
/// @param analyzer_handle Document highlight analyzer handle
/// @param changes_range Change range, array structure: [startLine],[startColumn],[endLine],[endColumn]
/// @param new_text Changed text
/// @return Full analysis result for the entire document, tightly packed in byte order. Structure:
/// @code
/// Same format as sl_text_analyze:
/// [flags, spanStride, lineCount, lineEntry...]
/// @endcode
/// Note: the return value must be freed by calling sl_free_buffer after use
@ffi.Native<
  ffi.Pointer<ffi.Int32> Function(
    sl_analyzer_handle_t,
    ffi.Pointer<ffi.Int32>,
    ffi.Pointer<ffi.Char>,
  )
>(assetId: _sweetlineAssetId)
external ffi.Pointer<ffi.Int32> sl_document_analyze_incremental(
  sl_analyzer_handle_t analyzer_handle,
  ffi.Pointer<ffi.Int32> changes_range,
  ffi.Pointer<ffi.Char> new_text,
);

/// Perform incremental highlight analysis on a managed document, returning only a highlight slice for the specified line range
/// @param analyzer_handle Document highlight analyzer handle
/// @param changes_range Change range, array structure: [startLine],[startColumn],[endLine],[endColumn]
/// @param new_text Changed text
/// @param visible_range Visible line range, array structure: [startLine],[lineCount]
/// @return Highlight slice for the specified line range, tightly packed in byte order. Structure:
/// @code
/// result[0] = span payload flags
/// bit0: hasStartIndex
/// bit1: inlineStyle
/// result[1] = span field count (stride)
/// result[2] = slice start line (start_line)
/// result[3] = total line count after patch (total_line_count)
/// result[4] = slice line count (line_count)
/// Followed by line_count line entries:
/// line_entry[0] = span count of current line
/// followed by span payloads (same span payload structure as sl_text_analyze)
/// @endcode
/// Note: the return value must be freed by calling sl_free_buffer after use
@ffi.Native<
  ffi.Pointer<ffi.Int32> Function(
    sl_analyzer_handle_t,
    ffi.Pointer<ffi.Int32>,
    ffi.Pointer<ffi.Char>,
    ffi.Pointer<ffi.Int32>,
  )
>(assetId: _sweetlineAssetId)
external ffi.Pointer<ffi.Int32> sl_document_analyze_incremental_in_line_range(
  sl_analyzer_handle_t analyzer_handle,
  ffi.Pointer<ffi.Int32> changes_range,
  ffi.Pointer<ffi.Char> new_text,
  ffi.Pointer<ffi.Int32> visible_range,
);

/// Get highlight slice from the current cached document highlight result
/// Requires prior call to sl_document_analyze or sl_document_analyze_incremental
/// @param analyzer_handle Document highlight analyzer handle
/// @param visible_range Visible line range, array structure: [startLine],[lineCount]
/// @return Highlight slice for the specified line range, tightly packed in byte order. Structure:
/// @code
/// Same format as sl_document_analyze_incremental_in_line_range:
/// [flags, spanStride, startLine, totalLineCount, lineCount, lineEntry...]
/// @endcode
/// Note: the return value must be freed by calling sl_free_buffer after use
@ffi.Native<
  ffi.Pointer<ffi.Int32> Function(sl_analyzer_handle_t, ffi.Pointer<ffi.Int32>)
>(assetId: _sweetlineAssetId)
external ffi.Pointer<ffi.Int32> sl_document_get_highlight_slice(
  sl_analyzer_handle_t analyzer_handle,
  ffi.Pointer<ffi.Int32> visible_range,
);

/// Perform indent guide analysis on a managed document (requires prior call to sl_document_analyze or sl_document_analyze_incremental)
/// @param analyzer_handle Document highlight analyzer handle
/// @return Analysis result, tightly packed in byte order. Structure:
/// @code
/// result[0] = number of indent guide lines (guide_count)
/// result[1] = fixed field count per guide line (stride=6)
/// result[2] = number of line states (line_count)
/// result[3] = field count per line state (4)
/// Followed by guide_count guide line entries, each with structure:
/// [column, start_line, end_line, nesting_level, scope_rule_id, branch_count, branch_line_0, branch_column_0, ...]
/// Note: actual length per guide line = stride + branch_count * 2
/// Followed by line_count line state entries, each with structure:
/// [nesting_level, scope_state, scope_column, indent_level]
/// where scope_state: 0=START, 1=END, 2=CONTENT
/// @endcode
/// Note: the return value must be freed by calling sl_free_buffer after use
@ffi.Native<ffi.Pointer<ffi.Int32> Function(sl_analyzer_handle_t)>(assetId: _sweetlineAssetId)
external ffi.Pointer<ffi.Int32> sl_document_analyze_indent_guides(
  sl_analyzer_handle_t analyzer_handle,
);

/// Free the memory of analysis results. All analysis functions returning int32_t*
/// (such as sl_text_analyze, sl_document_analyze, sl_document_analyze_incremental,
/// sl_document_analyze_incremental_in_line_range, sl_document_get_highlight_slice) must be freed via this function
/// @param result Highlight analysis result
@ffi.Native<ffi.Void Function(ffi.Pointer<ffi.Int32>)>(assetId: _sweetlineAssetId)
external void sl_free_buffer(ffi.Pointer<ffi.Int32> result);

/// Error codes
enum sl_error {
  SL_OK(0),
  SL_HANDLE_INVALID(1),
  SL_JSON_PROPERTY_MISSED(-1),
  SL_JSON_PROPERTY_INVALID(-2),
  SL_PATTERN_INVALID(-3),
  SL_STATE_INVALID(-4),
  SL_JSON_INVALID(-5),
  SL_FILE_NOT_EXISTS(-6),
  SL_FILE_INVALID(-7),
  SL_IMPORT_SYNTAX_NOT_FOUND(-8),
  SL_STATE_REFERENCE_NOT_FOUND(-9),
  SL_INLINE_STYLE_REFERENCE_NOT_FOUND(-10);

  final int value;
  const sl_error(this.value);

  static sl_error fromValue(int value) => switch (value) {
    0 => SL_OK,
    1 => SL_HANDLE_INVALID,
    -1 => SL_JSON_PROPERTY_MISSED,
    -2 => SL_JSON_PROPERTY_INVALID,
    -3 => SL_PATTERN_INVALID,
    -4 => SL_STATE_INVALID,
    -5 => SL_JSON_INVALID,
    -6 => SL_FILE_NOT_EXISTS,
    -7 => SL_FILE_INVALID,
    -8 => SL_IMPORT_SYNTAX_NOT_FOUND,
    -9 => SL_STATE_REFERENCE_NOT_FOUND,
    -10 => SL_INLINE_STYLE_REFERENCE_NOT_FOUND,
    _ => throw ArgumentError('Unknown value for sl_error: $value'),
  };
}

/// Syntax rule error information
final class sl_syntax_error extends ffi.Struct {
  /// Error code
  @ffi.Int()
  external int err_codeAsInt;

  sl_error get err_code => sl_error.fromValue(err_codeAsInt);

  /// Error message
  external ffi.Pointer<ffi.Char> err_msg;
}

typedef sl_syntax_error_t = sl_syntax_error;

final class sl_document_handle extends ffi.Opaque {}

typedef sl_document_handle_t = ffi.Pointer<sl_document_handle>;

final class sl_engine_handle extends ffi.Opaque {}

typedef sl_engine_handle_t = ffi.Pointer<sl_engine_handle>;

final class sl_analyzer_handle extends ffi.Opaque {}

typedef sl_analyzer_handle_t = ffi.Pointer<sl_analyzer_handle>;
